src/grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> declaracion
Rule 5     statement -> asignacion
Rule 6     statement -> select
Rule 7     statement -> condicion
Rule 8     statement -> procedure
Rule 9     statement -> llamada
Rule 10    statement -> function
Rule 11    statement -> return
Rule 12    statement -> ciclo
Rule 13    declaracion -> DECLARE IDVARIABLE AS TIPODATO PUNTOYCOMA
Rule 14    asignacion -> SET IDVARIABLE IGUAL expresion PUNTOYCOMA
Rule 15    select -> SELECT expresion PUNTOYCOMA
Rule 16    condicion -> IF PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END PUNTOYCOMA
Rule 17    condicion -> IF PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END ELSE BEGIN statements END PUNTOYCOMA
Rule 18    return -> RETURN expresion PUNTOYCOMA
Rule 19    return -> RETURN PUNTOYCOMA
Rule 20    ciclo -> WHILE PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END
Rule 21    procedure -> CREATE PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
Rule 22    procedure -> CREATE PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
Rule 23    function -> CREATE FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
Rule 24    function -> CREATE FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
Rule 25    llamada -> EXEC IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA PUNTOYCOMA
Rule 26    llamada -> EXEC IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA PUNTOYCOMA
Rule 27    args_list -> args_list COMA IDVARIABLE TIPODATO
Rule 28    args_list -> IDVARIABLE TIPODATO
Rule 29    params_list -> params_list COMA IDVARIABLE IGUAL expresion
Rule 30    params_list -> IDVARIABLE IGUAL expresion
Rule 31    expresion -> relacionales
Rule 32    expresion -> logicas
Rule 33    expresion -> valoresfinales
Rule 34    expresion -> aritmeticas
Rule 35    expresion -> PARENTESISABRE expresion PARENTESISCIERRA
Rule 36    expresion -> IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA
Rule 37    valoresfinales -> ENTERO
Rule 38    valoresfinales -> DECIMAL
Rule 39    valoresfinales -> CADENA
Rule 40    valoresfinales -> IDVARIABLE
Rule 41    valoresfinales -> BOOL
Rule 42    valoresfinales -> NULL
Rule 43    relacionales -> expresion MAYOR expresion
Rule 44    relacionales -> expresion MENOR expresion
Rule 45    relacionales -> expresion MAYORIGUAL expresion
Rule 46    relacionales -> expresion MENORIGUAL expresion
Rule 47    relacionales -> expresion IGUALLOGICO expresion
Rule 48    relacionales -> expresion DIFERENTE expresion
Rule 49    logicas -> expresion AND expresion
Rule 50    logicas -> expresion OR expresion
Rule 51    aritmeticas -> RESTA expresion
Rule 52    aritmeticas -> expresion SUMA expresion
Rule 53    aritmeticas -> expresion RESTA expresion
Rule 54    aritmeticas -> expresion MULTIPLICACION expresion
Rule 55    aritmeticas -> expresion DIVISION expresion

Terminals, with rules where they appear

AND                  : 49
AS                   : 13 21 22 23 24
BEGIN                : 16 17 17 20 21 22 23 24
BOOL                 : 41
CADENA               : 39
COMA                 : 27 29
CREATE               : 21 22 23 24
DECIMAL              : 38
DECLARE              : 13
DIFERENTE            : 48
DIVISION             : 55
ELSE                 : 17
END                  : 16 17 17 20 21 22 23 24
ENTERO               : 37
EXEC                 : 25 26
FUNCTION             : 23 24
IDENTIFICADORGLOBAL  : 21 22 23 24 25 26 36
IDVARIABLE           : 13 14 27 28 29 30 40
IF                   : 16 17
IGUAL                : 14 29 30
IGUALLOGICO          : 47
MAYOR                : 43
MAYORIGUAL           : 45
MENOR                : 44
MENORIGUAL           : 46
MULTIPLICACION       : 54
NULL                 : 42
OR                   : 50
PARENTESISABRE       : 16 17 20 21 22 23 24 25 26 35 36
PARENTESISCIERRA     : 16 17 20 21 22 23 24 25 26 35 36
PROCEDURE            : 21 22
PUNTOYCOMA           : 13 14 15 16 17 18 19 21 22 23 24 25 26
RESTA                : 51 53
RETURN               : 18 19 23 24
SELECT               : 15
SET                  : 14
SUMA                 : 52
TIPODATO             : 13 23 24 27 28
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

args_list            : 21 23 27
aritmeticas          : 34
asignacion           : 5
ciclo                : 12
condicion            : 7
declaracion          : 4
expresion            : 14 15 16 17 18 20 29 30 35 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 52 53 53 54 54 55 55
function             : 10
llamada              : 9
logicas              : 32
params_list          : 25 29 36
procedure            : 8
program              : 0
relacionales         : 31
return               : 11
select               : 6
statement            : 2 3
statements           : 1 2 16 17 17 20 21 22 23 24
valoresfinales       : 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . declaracion
    (5) statement -> . asignacion
    (6) statement -> . select
    (7) statement -> . condicion
    (8) statement -> . procedure
    (9) statement -> . llamada
    (10) statement -> . function
    (11) statement -> . return
    (12) statement -> . ciclo
    (13) declaracion -> . DECLARE IDVARIABLE AS TIPODATO PUNTOYCOMA
    (14) asignacion -> . SET IDVARIABLE IGUAL expresion PUNTOYCOMA
    (15) select -> . SELECT expresion PUNTOYCOMA
    (16) condicion -> . IF PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END PUNTOYCOMA
    (17) condicion -> . IF PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END ELSE BEGIN statements END PUNTOYCOMA
    (21) procedure -> . CREATE PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
    (22) procedure -> . CREATE PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
    (25) llamada -> . EXEC IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA PUNTOYCOMA
    (26) llamada -> . EXEC IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA PUNTOYCOMA
    (23) function -> . CREATE FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
    (24) function -> . CREATE FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
    (18) return -> . RETURN expresion PUNTOYCOMA
    (19) return -> . RETURN PUNTOYCOMA
    (20) ciclo -> . WHILE PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END

    DECLARE         shift and go to state 13
    SET             shift and go to state 14
    SELECT          shift and go to state 15
    IF              shift and go to state 16
    CREATE          shift and go to state 17
    EXEC            shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    select                         shift and go to state 6
    condicion                      shift and go to state 7
    procedure                      shift and go to state 8
    llamada                        shift and go to state 9
    function                       shift and go to state 10
    return                         shift and go to state 11
    ciclo                          shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . declaracion
    (5) statement -> . asignacion
    (6) statement -> . select
    (7) statement -> . condicion
    (8) statement -> . procedure
    (9) statement -> . llamada
    (10) statement -> . function
    (11) statement -> . return
    (12) statement -> . ciclo
    (13) declaracion -> . DECLARE IDVARIABLE AS TIPODATO PUNTOYCOMA
    (14) asignacion -> . SET IDVARIABLE IGUAL expresion PUNTOYCOMA
    (15) select -> . SELECT expresion PUNTOYCOMA
    (16) condicion -> . IF PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END PUNTOYCOMA
    (17) condicion -> . IF PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END ELSE BEGIN statements END PUNTOYCOMA
    (21) procedure -> . CREATE PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
    (22) procedure -> . CREATE PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
    (25) llamada -> . EXEC IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA PUNTOYCOMA
    (26) llamada -> . EXEC IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA PUNTOYCOMA
    (23) function -> . CREATE FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
    (24) function -> . CREATE FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
    (18) return -> . RETURN expresion PUNTOYCOMA
    (19) return -> . RETURN PUNTOYCOMA
    (20) ciclo -> . WHILE PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END

    $end            reduce using rule 1 (program -> statements .)
    DECLARE         shift and go to state 13
    SET             shift and go to state 14
    SELECT          shift and go to state 15
    IF              shift and go to state 16
    CREATE          shift and go to state 17
    EXEC            shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20

    statement                      shift and go to state 21
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    select                         shift and go to state 6
    condicion                      shift and go to state 7
    procedure                      shift and go to state 8
    llamada                        shift and go to state 9
    function                       shift and go to state 10
    return                         shift and go to state 11
    ciclo                          shift and go to state 12

state 3

    (3) statements -> statement .

    DECLARE         reduce using rule 3 (statements -> statement .)
    SET             reduce using rule 3 (statements -> statement .)
    SELECT          reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    CREATE          reduce using rule 3 (statements -> statement .)
    EXEC            reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> declaracion .

    DECLARE         reduce using rule 4 (statement -> declaracion .)
    SET             reduce using rule 4 (statement -> declaracion .)
    SELECT          reduce using rule 4 (statement -> declaracion .)
    IF              reduce using rule 4 (statement -> declaracion .)
    CREATE          reduce using rule 4 (statement -> declaracion .)
    EXEC            reduce using rule 4 (statement -> declaracion .)
    RETURN          reduce using rule 4 (statement -> declaracion .)
    WHILE           reduce using rule 4 (statement -> declaracion .)
    $end            reduce using rule 4 (statement -> declaracion .)
    END             reduce using rule 4 (statement -> declaracion .)


state 5

    (5) statement -> asignacion .

    DECLARE         reduce using rule 5 (statement -> asignacion .)
    SET             reduce using rule 5 (statement -> asignacion .)
    SELECT          reduce using rule 5 (statement -> asignacion .)
    IF              reduce using rule 5 (statement -> asignacion .)
    CREATE          reduce using rule 5 (statement -> asignacion .)
    EXEC            reduce using rule 5 (statement -> asignacion .)
    RETURN          reduce using rule 5 (statement -> asignacion .)
    WHILE           reduce using rule 5 (statement -> asignacion .)
    $end            reduce using rule 5 (statement -> asignacion .)
    END             reduce using rule 5 (statement -> asignacion .)


state 6

    (6) statement -> select .

    DECLARE         reduce using rule 6 (statement -> select .)
    SET             reduce using rule 6 (statement -> select .)
    SELECT          reduce using rule 6 (statement -> select .)
    IF              reduce using rule 6 (statement -> select .)
    CREATE          reduce using rule 6 (statement -> select .)
    EXEC            reduce using rule 6 (statement -> select .)
    RETURN          reduce using rule 6 (statement -> select .)
    WHILE           reduce using rule 6 (statement -> select .)
    $end            reduce using rule 6 (statement -> select .)
    END             reduce using rule 6 (statement -> select .)


state 7

    (7) statement -> condicion .

    DECLARE         reduce using rule 7 (statement -> condicion .)
    SET             reduce using rule 7 (statement -> condicion .)
    SELECT          reduce using rule 7 (statement -> condicion .)
    IF              reduce using rule 7 (statement -> condicion .)
    CREATE          reduce using rule 7 (statement -> condicion .)
    EXEC            reduce using rule 7 (statement -> condicion .)
    RETURN          reduce using rule 7 (statement -> condicion .)
    WHILE           reduce using rule 7 (statement -> condicion .)
    $end            reduce using rule 7 (statement -> condicion .)
    END             reduce using rule 7 (statement -> condicion .)


state 8

    (8) statement -> procedure .

    DECLARE         reduce using rule 8 (statement -> procedure .)
    SET             reduce using rule 8 (statement -> procedure .)
    SELECT          reduce using rule 8 (statement -> procedure .)
    IF              reduce using rule 8 (statement -> procedure .)
    CREATE          reduce using rule 8 (statement -> procedure .)
    EXEC            reduce using rule 8 (statement -> procedure .)
    RETURN          reduce using rule 8 (statement -> procedure .)
    WHILE           reduce using rule 8 (statement -> procedure .)
    $end            reduce using rule 8 (statement -> procedure .)
    END             reduce using rule 8 (statement -> procedure .)


state 9

    (9) statement -> llamada .

    DECLARE         reduce using rule 9 (statement -> llamada .)
    SET             reduce using rule 9 (statement -> llamada .)
    SELECT          reduce using rule 9 (statement -> llamada .)
    IF              reduce using rule 9 (statement -> llamada .)
    CREATE          reduce using rule 9 (statement -> llamada .)
    EXEC            reduce using rule 9 (statement -> llamada .)
    RETURN          reduce using rule 9 (statement -> llamada .)
    WHILE           reduce using rule 9 (statement -> llamada .)
    $end            reduce using rule 9 (statement -> llamada .)
    END             reduce using rule 9 (statement -> llamada .)


state 10

    (10) statement -> function .

    DECLARE         reduce using rule 10 (statement -> function .)
    SET             reduce using rule 10 (statement -> function .)
    SELECT          reduce using rule 10 (statement -> function .)
    IF              reduce using rule 10 (statement -> function .)
    CREATE          reduce using rule 10 (statement -> function .)
    EXEC            reduce using rule 10 (statement -> function .)
    RETURN          reduce using rule 10 (statement -> function .)
    WHILE           reduce using rule 10 (statement -> function .)
    $end            reduce using rule 10 (statement -> function .)
    END             reduce using rule 10 (statement -> function .)


state 11

    (11) statement -> return .

    DECLARE         reduce using rule 11 (statement -> return .)
    SET             reduce using rule 11 (statement -> return .)
    SELECT          reduce using rule 11 (statement -> return .)
    IF              reduce using rule 11 (statement -> return .)
    CREATE          reduce using rule 11 (statement -> return .)
    EXEC            reduce using rule 11 (statement -> return .)
    RETURN          reduce using rule 11 (statement -> return .)
    WHILE           reduce using rule 11 (statement -> return .)
    $end            reduce using rule 11 (statement -> return .)
    END             reduce using rule 11 (statement -> return .)


state 12

    (12) statement -> ciclo .

    DECLARE         reduce using rule 12 (statement -> ciclo .)
    SET             reduce using rule 12 (statement -> ciclo .)
    SELECT          reduce using rule 12 (statement -> ciclo .)
    IF              reduce using rule 12 (statement -> ciclo .)
    CREATE          reduce using rule 12 (statement -> ciclo .)
    EXEC            reduce using rule 12 (statement -> ciclo .)
    RETURN          reduce using rule 12 (statement -> ciclo .)
    WHILE           reduce using rule 12 (statement -> ciclo .)
    $end            reduce using rule 12 (statement -> ciclo .)
    END             reduce using rule 12 (statement -> ciclo .)


state 13

    (13) declaracion -> DECLARE . IDVARIABLE AS TIPODATO PUNTOYCOMA

    IDVARIABLE      shift and go to state 22


state 14

    (14) asignacion -> SET . IDVARIABLE IGUAL expresion PUNTOYCOMA

    IDVARIABLE      shift and go to state 23


state 15

    (15) select -> SELECT . expresion PUNTOYCOMA
    (31) expresion -> . relacionales
    (32) expresion -> . logicas
    (33) expresion -> . valoresfinales
    (34) expresion -> . aritmeticas
    (35) expresion -> . PARENTESISABRE expresion PARENTESISCIERRA
    (36) expresion -> . IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA
    (43) relacionales -> . expresion MAYOR expresion
    (44) relacionales -> . expresion MENOR expresion
    (45) relacionales -> . expresion MAYORIGUAL expresion
    (46) relacionales -> . expresion MENORIGUAL expresion
    (47) relacionales -> . expresion IGUALLOGICO expresion
    (48) relacionales -> . expresion DIFERENTE expresion
    (49) logicas -> . expresion AND expresion
    (50) logicas -> . expresion OR expresion
    (37) valoresfinales -> . ENTERO
    (38) valoresfinales -> . DECIMAL
    (39) valoresfinales -> . CADENA
    (40) valoresfinales -> . IDVARIABLE
    (41) valoresfinales -> . BOOL
    (42) valoresfinales -> . NULL
    (51) aritmeticas -> . RESTA expresion
    (52) aritmeticas -> . expresion SUMA expresion
    (53) aritmeticas -> . expresion RESTA expresion
    (54) aritmeticas -> . expresion MULTIPLICACION expresion
    (55) aritmeticas -> . expresion DIVISION expresion

    PARENTESISABRE  shift and go to state 29
    IDENTIFICADORGLOBAL shift and go to state 30
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    CADENA          shift and go to state 33
    IDVARIABLE      shift and go to state 34
    BOOL            shift and go to state 35
    NULL            shift and go to state 36
    RESTA           shift and go to state 37

    expresion                      shift and go to state 24
    relacionales                   shift and go to state 25
    logicas                        shift and go to state 26
    valoresfinales                 shift and go to state 27
    aritmeticas                    shift and go to state 28

state 16

    (16) condicion -> IF . PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END PUNTOYCOMA
    (17) condicion -> IF . PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END ELSE BEGIN statements END PUNTOYCOMA

    PARENTESISABRE  shift and go to state 38


state 17

    (21) procedure -> CREATE . PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
    (22) procedure -> CREATE . PROCEDURE IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA AS BEGIN statements END PUNTOYCOMA
    (23) function -> CREATE . FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE args_list PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA
    (24) function -> CREATE . FUNCTION IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA RETURN TIPODATO AS BEGIN statements END PUNTOYCOMA

    PROCEDURE       shift and go to state 39
    FUNCTION        shift and go to state 40


state 18

    (25) llamada -> EXEC . IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA PUNTOYCOMA
    (26) llamada -> EXEC . IDENTIFICADORGLOBAL PARENTESISABRE PARENTESISCIERRA PUNTOYCOMA

    IDENTIFICADORGLOBAL shift and go to state 41


state 19

    (18) return -> RETURN . expresion PUNTOYCOMA
    (19) return -> RETURN . PUNTOYCOMA
    (31) expresion -> . relacionales
    (32) expresion -> . logicas
    (33) expresion -> . valoresfinales
    (34) expresion -> . aritmeticas
    (35) expresion -> . PARENTESISABRE expresion PARENTESISCIERRA
    (36) expresion -> . IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA
    (43) relacionales -> . expresion MAYOR expresion
    (44) relacionales -> . expresion MENOR expresion
    (45) relacionales -> . expresion MAYORIGUAL expresion
    (46) relacionales -> . expresion MENORIGUAL expresion
    (47) relacionales -> . expresion IGUALLOGICO expresion
    (48) relacionales -> . expresion DIFERENTE expresion
    (49) logicas -> . expresion AND expresion
    (50) logicas -> . expresion OR expresion
    (37) valoresfinales -> . ENTERO
    (38) valoresfinales -> . DECIMAL
    (39) valoresfinales -> . CADENA
    (40) valoresfinales -> . IDVARIABLE
    (41) valoresfinales -> . BOOL
    (42) valoresfinales -> . NULL
    (51) aritmeticas -> . RESTA expresion
    (52) aritmeticas -> . expresion SUMA expresion
    (53) aritmeticas -> . expresion RESTA expresion
    (54) aritmeticas -> . expresion MULTIPLICACION expresion
    (55) aritmeticas -> . expresion DIVISION expresion

    PUNTOYCOMA      shift and go to state 43
    PARENTESISABRE  shift and go to state 29
    IDENTIFICADORGLOBAL shift and go to state 30
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    CADENA          shift and go to state 33
    IDVARIABLE      shift and go to state 34
    BOOL            shift and go to state 35
    NULL            shift and go to state 36
    RESTA           shift and go to state 37

    expresion                      shift and go to state 42
    relacionales                   shift and go to state 25
    logicas                        shift and go to state 26
    valoresfinales                 shift and go to state 27
    aritmeticas                    shift and go to state 28

state 20

    (20) ciclo -> WHILE . PARENTESISABRE expresion PARENTESISCIERRA BEGIN statements END

    PARENTESISABRE  shift and go to state 44


state 21

    (2) statements -> statements statement .

    DECLARE         reduce using rule 2 (statements -> statements statement .)
    SET             reduce using rule 2 (statements -> statements statement .)
    SELECT          reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    CREATE          reduce using rule 2 (statements -> statements statement .)
    EXEC            reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    END             reduce using rule 2 (statements -> statements statement .)


state 22

    (13) declaracion -> DECLARE IDVARIABLE . AS TIPODATO PUNTOYCOMA

    AS              shift and go to state 45


state 23

    (14) asignacion -> SET IDVARIABLE . IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 46


state 24

    (15) select -> SELECT expresion . PUNTOYCOMA
    (43) relacionales -> expresion . MAYOR expresion
    (44) relacionales -> expresion . MENOR expresion
    (45) relacionales -> expresion . MAYORIGUAL expresion
    (46) relacionales -> expresion . MENORIGUAL expresion
    (47) relacionales -> expresion . IGUALLOGICO expresion
    (48) relacionales -> expresion . DIFERENTE expresion
    (49) logicas -> expresion . AND expresion
    (50) logicas -> expresion . OR expresion
    (52) aritmeticas -> expresion . SUMA expresion
    (53) aritmeticas -> expresion . RESTA expresion
    (54) aritmeticas -> expresion . MULTIPLICACION expresion
    (55) aritmeticas -> expresion . DIVISION expresion

    PUNTOYCOMA      shift and go to state 47
    MAYOR           shift and go to state 48
    MENOR           shift and go to state 49
    MAYORIGUAL      shift and go to state 50
    MENORIGUAL      shift and go to state 51
    IGUALLOGICO     shift and go to state 52
    DIFERENTE       shift and go to state 53
    AND             shift and go to state 54
    OR              shift and go to state 55
    SUMA            shift and go to state 56
    RESTA           shift and go to state 57
    MULTIPLICACION  shift and go to state 58
    DIVISION        shift and go to state 59


state 25

    (31) expresion -> relacionales .

    PUNTOYCOMA      reduce using rule 31 (expresion -> relacionales .)
    MAYOR           reduce using rule 31 (expresion -> relacionales .)
    MENOR           reduce using rule 31 (expresion -> relacionales .)
    MAYORIGUAL      reduce using rule 31 (expresion -> relacionales .)
    MENORIGUAL      reduce using rule 31 (expresion -> relacionales .)
    IGUALLOGICO     reduce using rule 31 (expresion -> relacionales .)
    DIFERENTE       reduce using rule 31 (expresion -> relacionales .)
    AND             reduce using rule 31 (expresion -> relacionales .)
    OR              reduce using rule 31 (expresion -> relacionales .)
    SUMA            reduce using rule 31 (expresion -> relacionales .)
    RESTA           reduce using rule 31 (expresion -> relacionales .)
    MULTIPLICACION  reduce using rule 31 (expresion -> relacionales .)
    DIVISION        reduce using rule 31 (expresion -> relacionales .)
    PARENTESISCIERRA reduce using rule 31 (expresion -> relacionales .)
    COMA            reduce using rule 31 (expresion -> relacionales .)


state 26

    (32) expresion -> logicas .

    PUNTOYCOMA      reduce using rule 32 (expresion -> logicas .)
    MAYOR           reduce using rule 32 (expresion -> logicas .)
    MENOR           reduce using rule 32 (expresion -> logicas .)
    MAYORIGUAL      reduce using rule 32 (expresion -> logicas .)
    MENORIGUAL      reduce using rule 32 (expresion -> logicas .)
    IGUALLOGICO     reduce using rule 32 (expresion -> logicas .)
    DIFERENTE       reduce using rule 32 (expresion -> logicas .)
    AND             reduce using rule 32 (expresion -> logicas .)
    OR              reduce using rule 32 (expresion -> logicas .)
    SUMA            reduce using rule 32 (expresion -> logicas .)
    RESTA           reduce using rule 32 (expresion -> logicas .)
    MULTIPLICACION  reduce using rule 32 (expresion -> logicas .)
    DIVISION        reduce using rule 32 (expresion -> logicas .)
    PARENTESISCIERRA reduce using rule 32 (expresion -> logicas .)
    COMA            reduce using rule 32 (expresion -> logicas .)


state 27

    (33) expresion -> valoresfinales .

    PUNTOYCOMA      reduce using rule 33 (expresion -> valoresfinales .)
    MAYOR           reduce using rule 33 (expresion -> valoresfinales .)
    MENOR           reduce using rule 33 (expresion -> valoresfinales .)
    MAYORIGUAL      reduce using rule 33 (expresion -> valoresfinales .)
    MENORIGUAL      reduce using rule 33 (expresion -> valoresfinales .)
    IGUALLOGICO     reduce using rule 33 (expresion -> valoresfinales .)
    DIFERENTE       reduce using rule 33 (expresion -> valoresfinales .)
    AND             reduce using rule 33 (expresion -> valoresfinales .)
    OR              reduce using rule 33 (expresion -> valoresfinales .)
    SUMA            reduce using rule 33 (expresion -> valoresfinales .)
    RESTA           reduce using rule 33 (expresion -> valoresfinales .)
    MULTIPLICACION  reduce using rule 33 (expresion -> valoresfinales .)
    DIVISION        reduce using rule 33 (expresion -> valoresfinales .)
    PARENTESISCIERRA reduce using rule 33 (expresion -> valoresfinales .)
    COMA            reduce using rule 33 (expresion -> valoresfinales .)


state 28

    (34) expresion -> aritmeticas .

    PUNTOYCOMA      reduce using rule 34 (expresion -> aritmeticas .)
    MAYOR           reduce using rule 34 (expresion -> aritmeticas .)
    MENOR           reduce using rule 34 (expresion -> aritmeticas .)
    MAYORIGUAL      reduce using rule 34 (expresion -> aritmeticas .)
    MENORIGUAL      reduce using rule 34 (expresion -> aritmeticas .)
    IGUALLOGICO     reduce using rule 34 (expresion -> aritmeticas .)
    DIFERENTE       reduce using rule 34 (expresion -> aritmeticas .)
    AND             reduce using rule 34 (expresion -> aritmeticas .)
    OR              reduce using rule 34 (expresion -> aritmeticas .)
    SUMA            reduce using rule 34 (expresion -> aritmeticas .)
    RESTA           reduce using rule 34 (expresion -> aritmeticas .)
    MULTIPLICACION  reduce using rule 34 (expresion -> aritmeticas .)
    DIVISION        reduce using rule 34 (expresion -> aritmeticas .)
    PARENTESISCIERRA reduce using rule 34 (expresion -> aritmeticas .)
    COMA            reduce using rule 34 (expresion -> aritmeticas .)


state 29

    (35) expresion -> PARENTESISABRE . expresion PARENTESISCIERRA
    (31) expresion -> . relacionales
    (32) expresion -> . logicas
    (33) expresion -> . valoresfinales
    (34) expresion -> . aritmeticas
    (35) expresion -> . PARENTESISABRE expresion PARENTESISCIERRA
    (36) expresion -> . IDENTIFICADORGLOBAL PARENTESISABRE params_list PARENTESISCIERRA
    (43) relacionales -> . expresion MAYOR expresion
    (44) relacionales -> . expresion MENOR expresion
    (45) relacionales -> . expresion MAYORIGUAL expresion
    (46) relacionales -> . expresion MENORIGUAL expresion
    (47) relacionales -> . expresion IGUALLOGICO expresion
    (48) relacionales -> . expresion DIFERENTE expresion
    (49) logicas -> . expresion AND expresion
    (50) logicas -> . expresion OR expresion
    (37) valoresfinales -> . ENTERO
    (38) valoresfinales -> . DECIMAL
    (39) valoresfinales -> . CADENA
    (40) valoresfinales -> . IDVARIABLE
    (41) valoresfinales -> . BOOL
    (42) valoresfinales -> . NULL
    (51) aritmeticas -> . RESTA expresion
    (52) aritmeticas -> . expresion SUMA expresion
    (53) aritmeticas -> . expresion RESTA expresion
    (54) aritmeticas -> . expresion MULTIPLICACION expresion
    (55) aritmeticas -> . expresion DIVISION expresion

    PARENTESISABRE  shift and go to state 29
    IDENTIFICADORGLOBAL shift and go to state 30
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    CADENA          shift and go to state 33
    IDVARIABLE      shift and go to state 34
    BOOL            shift and go to state 35
    NULL            shift and go to state 36
    RESTA           shift and go to state 37

    expresion                      shift and go to state 60
    relacionales                   shift and go to state 25
    logicas                        shift and go to state 26
    valoresfinales                 shift and go to state 27
    aritmeticas                    shift and go to state 28

state 30

    (36) expresion -> IDENTIFICADORGLOBAL . PARENTESISABRE params_list PARENTESISCIERRA

    PARENTESISABRE  shift and go to state 61


state 31

    (37) valoresfinales -> ENTERO .
